--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
 # Replace the text below to customize your site
-site_name: Hub usine-école 4.0
+site_name: Hub Production Automatisée et Usine connectée (PAUC)
 docs_dir: 'docs/'
 site_dir: 'generated/'
 
 site_description: Bienvenue sur le site officiel de l'Usine École d'UniLaSalle Amiens, plateforme dédiée aux nouvelles technologies lié à l'industrie du futur.
-site_author: Jules Topart, Sebastian Gomes
+site_author: Jules Topart, Sebastian Gomez
 copyright: Copyright 2021 - Unilasalle Amiens - Creative Commons Attribution Non Commercial
 
 site_url: https://unifactory-lab.github.io/hub
@@ -15,10 +15,16 @@ edit_uri: edit/main/docs/
 
 nav:
   - Accueil : index.md
-  - Usines école : docs.md
-  - Cours : docs.md
-  - Projets : docs.md
-  - Ressource : docs.md
+  - Usines école : usines_ecole.md
+
+  - Cours : 
+    - Robotique: class/robotics.md
+    - Usine numerique: class/usine-numerique.md
+
+  - Projets : 
+    - Projets: projets/projets.md
+    - Actionneur imp3D: projets/actionneur_imp_3d.md
+  - Ressource : ressources.md
   # - Usines : 
   #   - Usine école 4.0 :  line/am.line.md
   #   - Mini-usine :  line/pop.corn.line.md
@@ -176,6 +182,7 @@ extra_javascript:
 
 extra_css:
   - stylesheets/extra.css
+  - stylesheets/css/neoteroi-mkdocs.css
 
 markdown_extensions:
 - attr_list
@@ -205,3 +212,4 @@ markdown_extensions:
       - name: vegalite
         class: vegalite
         format: !!python/name:mkdocs_charts_plugin.fences.fence_vegalite
+- neoteroi.cards
